# hello-world-action-ocaml

./: .gitignore  .ocamlformat  LICENSE  LICENSE.md  README.md  dune  dune-project  hello.ml  hello.mli  hello.opam  test.ml  world.ml
.github/workflows/: opam-dependency-submission.yml  test.yml  workflow.yml
